# CatBot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  changelog.md  docker-compose.yml  internal.py  license.md  main.py  plans.md  pyrightconfig.json  readme.md  requirements.txt  ruff.toml
.github/workflows/: ci.yml
CatBot/: __init__.py  __init__.pyi  __main__.py  bot_init.py  commands.py  env_handler.py  env_handler.pyi  help.py  info.py  info.pyi  internal.py  internal_utils.py  pawprints.py  pawprints.pyi  representations.py  role_tools.py  role_tools.pyi
CatBot/CatBot_utils/: __init__.py  bot_init.py  confirm_button.py  emojis.py  internal_utils.py  logging_formatting.py
CatBot/color/: color.py  color_roles.py  color_tools.py
CatBot/date_time/: __init__.py  date_time.py  dt_formatting.py
CatBot/db/: __init__.py
CatBot/discord/: __init__.py  __init__.pyi  info.py  info.pyi
CatBot/experiments/: experimental.py
CatBot/fun/: fun.py
CatBot/help/: __init__.py  commands.py  help.py  representations.py
CatBot/management/: command_logging.py  management.py  moderation.py
CatBot/math/: math_utils.py  maths.py
CatBot/rand/: rand.py
CatBot/stats/: stats.py
CatBot/ui/: __init__.py  confirmation.py  confirmation.pyi  constants.py  constants.pyi  emoji.py  emoji.pyi
CatBot/util/: __init__.py  __init__.pyi  catbot.py  catbot.pyi  http.py  http.pyi  pawprints.py  pawprints.pyi
CatBot_old/CatBot_utils/: logging_formatting.py
CatBot_old/color/: color.py
CatBot_old/experiments/: experimental.py
CatBot_old/help/: __init__.py
CatBot_old/management/: management.py
CatBot_old/math/: stats.py
__catbot_tmp__/discord/: __init__.py  __init__.pyi  info.py
__catbot_tmp__/util/: __init__.pyi  http.py  pawprints.py
catbot/: __init__.py  __main__.py
catbot/db/: __init__.py  __init__.pyi
catbot/discord/: __init__.py
catbot/util/: __init__.py
color/: __init__.py  color_roles.py  color_tools.py  colors.py  role_manipulation.py
fizzbuzz/: __init__.py  __init__.pyi  __main__.py
fizzbuzz-macros/: Cargo.toml
fizzbuzz-macros/src/: lib.rs
fizzbuzz/db/: __init__.py  __init__.pyi  db.py  db.pyi  settings.py  settings.pyi
fizzbuzz/discord/: __init__.py  info.py  (+1 more)
fizzbuzz_python/: __main__.py
src/: info.rs  lib.rs  logging.rs  main.rs
tests/: test_pawprints.py  test_representations.py
(+182 files in other folders)
