[package]
name = "fizzbuzz"
version = "2.3.0"
edition = "2024"

[dependencies]
### core ###
serenity = "0.12"
poise = "0.6.2"
tokio = { version = "1.52.2", features = ["full"]}
futures = "0.3"
fizzbuzz-macros = { path = "fizzbuzz-macros" }

### database ###
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

### http + networking ###
reqwest = { version = "0.13.3", features = ["json"] }
governor = "0.10.4"

### image processing ###
image = "0.25.10"
palette = "0.7.6"

### system info ###
sysinfo = "0.38.4"

### time + timezones ###
chrono = "0.4.44"
chrono-tz = "0.10.4"

### logging ###
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "chrono"] }
tracing-appender = "0.2.5"

### config + API
envy = "0.4.2"
dotenvy = "0.15.7"
clap = { version = "4.5", features = ["derive"] }

### serialization ###
serde = "1.0.228"
serde_json = "1.0"

### utilities ###
lru = "0.18.0"
csscolorparser = "0.8.3"
anyhow = "1.0.102"
inventory = "0.3.24"